# maverick

./: .gitignore  .metadata  CHANGELOG.md  Makefile  README.md  pubspec.yaml
.fvm/: flutter_sdk
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/org/mars3142/maverick/: MaverickPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/org/mars3142/maverick_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Flutter/: .last_build_id
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
ios/: maverick.podspec
ios/Classes/: MaverickPlugin.h  MaverickPlugin.m  SwiftMaverickPlugin.swift
ios/Classes/lua/: llex.c  lua.c
lib/: maverick.dart
lib/bindings/: lua.ext.dart  lua.g.dart  native_lib.dart  types.dart
lib/classes/: lua.dart  lua.ext.dart
test/: maverick_test.dart
